// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match the snapshot when not on a page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <Component />
  <Footer
    changeCurrentPage={[Function]}
    currentPage=""
  />
</Component>
`;

exports[`App should match the snapshot when on the Camera page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <CameraWindow
    savePicture={[Function]}
    setCameraLoading={[Function]}
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Camera"
  />
</Component>
`;

exports[`App should match the snapshot when on the Collected landmarks page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <CollectedLandmarksContainer
    pics={Array []}
    visitedLocations={
      Array [
        Object {
          "description": "Beautiful Park",
          "landmark_id": 6,
          "lat": 39.72386,
          "lon": -104.88715,
          "name": "Great Lawn Park",
          "photo_url": "www.myimage.com/2",
        },
        Object {
          "description": "Beautiful Park",
          "landmark_id": 3,
          "lat": 39.7159,
          "lon": -104.90379,
          "name": "Buckley Annex",
          "photo_url": "www.myimage.com",
        },
      ]
    }
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Collected landmarks"
  />
</Component>
`;

exports[`App should match the snapshot when on the Home page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <Component />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Home"
  />
</Component>
`;

exports[`App should match the snapshot when on the Login page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <Login
    currentUserId={-1}
    fetchUserInfo={[Function]}
    setUserLoginId={[Function]}
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Login"
  />
</Component>
`;

exports[`App should match the snapshot when on the User profile page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "height": "100%",
      "position": "relative",
    }
  }
>
  <Header />
  <UserProfile
    profilePic=""
    takeProfilePic={[Function]}
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="User profile"
  />
</Component>
`;
